fix: marketing preview image distortion

--- a/src/pages/Marketing.css
+++ b/src/pages/Marketing.css
@@ -216,7 +216,7 @@
 
 .notification-image img {
   width: 100%;
-  max-height: 160px;
+  height: 160px;
   object-fit: cover;
   display: block;
 }
